--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <script>
 const insults = [
-    "schifo", "inutile", "pessimo", "orribile", "brutto", "vergogna", "cacca", "fallito",
+    "schifo", "inutile", "pessimo", "orribile", "brutto", "vergogna", "cacca", "fallito", "Gavi", "Bosio", "figlio", "Laura", "Ferrari", "bosiese", "negraccio", "frocio", "gaviese", "vergogna", "Rizzo", "nasone", "brutto", "vergogna", "cacca", "fallito",
     "idiota", "cretino", "stupido", "imbecille", "incapace", "patetico", "ignorante", "scemo",
     "rincoglionito", "deficiente", "inutile come una forchetta nel brodo", "fallimento della programmazione",
     "maledetto", "disastro", "codice di merda", "codice inutile", "fai schifo", "sei una vergogna", "sei da buttare",
